--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,7 +5,8 @@
 
   <h2>Clinics</h2>
   <p>
-    <a href="/??">View all clinics</a>
+    <h4>Locate a Fertility Clinic</h4>
+    <form action='/list'
   </p>
 
   <!-- <h2>Services</h2>
