--- a/templates/map.html
+++ b/templates/map.html
@@ -10,14 +10,91 @@
     </style>
   </head>
   <body>
-    <h3>My Google Maps Demo</h3>
+    <h3>Locate a Fertility Clinic</h3>
+
+
+    <!-- Create a search bar -->
+    
+        <form action='/get-state-city' method="POST">
+            Use the map below and select a state to locate fertility clinics near you. Learn about the services they provide, the types of patients they see, and their success rates.<br><br>
+            
+
+            State:
+            <select name="state" id='state'>
+                <option value="ALABAMA">Alabama</option>
+                <option value="ALASKA">Alaska</option>
+                <option value="ARIZONA">Arizona</option>
+                <option value="ARKANSAS">Arkansas</option>
+                <option value="CALIFORNIA">California</option>
+                <option value="COLORADO">Colorado</option>
+                <option value="CONNECTICUT">Connecticut</option>
+                <option value="DELAWARE">Delaware</option>
+                <option value="DISTRICT OF COLUMBIA">District Of Columbia</option>
+                <option value="FLORIA">Florida</option>
+                <option value="GEORGIA">Georgia</option>
+                <option value="HAWAII">Hawaii</option>
+                <option value="IDAHO">Idaho</option>
+                <option value="ILLINOIS">Illinois</option>
+                <option value="INDIANA">Indiana</option>
+                <option value="IOWA">Iowa</option>
+                <option value="KANSAS">Kansas</option>
+                <option value="KENTUCKY">Kentucky</option>
+                <option value="LOUISIANA">Louisiana</option>
+                <option value="MAINE">Maine</option>
+                <option value="MARYLAND">Maryland</option>
+                <option value="MASSACHUSETTS">Massachusetts</option>
+                <option value="MICHIGAN">Michigan</option>
+                <option value="MINNESOTA">Minnesota</option>
+                <option value="MISSISSIPPI">Mississippi</option>
+                <option value="MISSOURI">Missouri</option>
+                <option value="MONTANA">Montana</option>
+                <option value="NEBRASKA">Nebraska</option>
+                <option value="NEVADA">Nevada</option>
+                <option value="NEW HAMPSHIRE">New Hampshire</option>
+                <option value="NEW JERSEY">New Jersey</option>
+                <option value="NEW MEXICO">New Mexico</option>
+                <option value="NEW YORK">New York</option>
+                <option value="NORTH CAROLINA">North Carolina</option>
+                <option value="NORTH DAKOTA">North Dakota</option>
+                <option value="OHIO">Ohio</option>
+                <option value="OKLAHOMA">Oklahoma</option>
+                <option value="OREGON">Oregon</option>
+                <option value="PENNYSYLVANIA">Pennsylvania</option>
+                <option value="RHODE ISLAND">Rhode Island</option>
+                <option value="SOUTH CAROLINA">South Carolina</option>
+                <option value="SOUTH DAKOTA">South Dakota</option>
+                <option value="TENNESSEE">Tennessee</option>
+                <option value="TEXAS">Texas</option>
+                <option value="UTAH">Utah</option>
+                <option value="VERMONT">Vermont</option>
+                <option value="VIRGINIA">Virginia</option>
+                <option value="WASHINGTON">Washington</option>
+                <option value="WEST VIRGINIA">West Virginia</option>
+                <option value="WISCONSIN">Wisconsin</option>
+                <option value="WYOMING">Wyoming</option>
+            </select>
+           
+            <br><br>
+           
+            City:
+
+            <input type="textarea" name="city">
+            
+
+            <input type='submit' value="Go"><br><br>
+        </form>
+   
+
+                
+
+
     <!--The div element for the map -->
     <div id="map"></div>
     <script>
       // Initialize and add the map
       function initMap() {
         // The location of Uluru
-        var uluru = {lat: -25.344, lng: 131.036};
+        var uluru = {lat: 39.381266, lng: -97.922211};
         // The map, centered at Uluru
         var map = new google.maps.Map(
           document.getElementById('map'), {zoom: 4, center: uluru});
@@ -26,5 +103,13 @@
         }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMGfncvWzTcGnWY59Yk5CM7Fp-l8_sqzI&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1y8atwwt1qwp5VH6k-Wm1Xwqkuw3IgxM&callback=initMap">
     </script>
+
+    <script>
+
+    </script>
+
+
+    </body>
+</html>
