google map not working

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title>Clinics and Success Rates</title>
-    <link rel="stylesheet" type="text/css" href="statics/map.css">
-    <script
-  src="https://code.jquery.com/jquery-3.4.1.js"
+    <link rel="stylesheet" type="text/css" href="static/map.css">
+
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -27,6 +29,7 @@
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script crossorigin src="https://unpkg.com/babel-standalone@6.26.0/babel.js" type='text/jsx'></script>
+    
 
 
 </body>
