--- a/templates/map.html
+++ b/templates/map.html
@@ -127,7 +127,7 @@
          
 
     <!--The div element for the map -->
-    <div id="map"></div>
+    <div id="map" style="height: 400px"></div>
     <script>
       // Initialize and add the map
     var map 
