--- a/templates/show_rates.html
+++ b/templates/show_rates.html
@@ -2,9 +2,23 @@
 
 {% block content %}
 
-View ART Data:<br><br>
+<h1>View ART Data:</h2><br><br>
+<!-- <script>
 
-<h4>{{ clinic_name }}</h4>
+function myFetch() {    
+    fetch('http://example.com/movies.json')
+      .then(function(response) {
+        return response.json();
+      })
+      .then(function(myJson) {
+        console.log(JSON.stringify(myJson));
+      });
+}  
+</script>    
+ -->
+<h2>{{ clinic_name }}</h2>
+<h3>{{ clinic_address }}</h3>
+
 
 Fresh embryo:<br><br>
     What is the chance of having multiple live births?<br>
@@ -98,6 +112,41 @@ Frozen embryo:<br><br>
                 {% endfor %}
             </tr>
         </table>
+
+<div id="map" style="height:400px; width:400px"></div>
+
+<script>
+
+    var marker;
+
+    function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 4,
+            center: {lat: 39.381266, lng: -97.922211}
+        });
+
+        var marker = new google.maps.Marker({
+            map: map,
+            animation: google.maps.Animation.DROP,
+            position: {lat: {{latitude}} , lng: {{longtitude}}}
+        });
+    
+
+        marker.addListener('click', toggleBounce);
+    }
+
+    function toggleBounce() {
+        if (marker.getAnimation() !== null) {
+            marker.setAnimation(null);
+        } else {
+            marker.setAnimation(google.maps.Animation.BOUNCE);
+        }
+    }
+
+
+</script>
+
+<script async defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1y8atwwt1qwp5VH6k-Wm1Xwqkuw3IgxM&libraries=places&callback=initMap"></script>
 
 {% endblock %}
 
