--- a/templates/show_list.html
+++ b/templates/show_list.html
@@ -2,7 +2,21 @@
 
 {% block content %}
 
-<h4>{{ user_state }} CLINICS</h4> 
+<!-- <script>
+
+function fetchData() {
+    fetch('https://maps.googleapis.com/maps/api/place/findplacefromtext/json?input=Museum%20of%20Contemporary%20Art%20Australia&inputtype=textquery&fields=photos,formatted_address,name,rating,opening_hours,geometry&key=AIzaSyDfjxfPTabsjVyZPQT1zp9L1VaB9sjvwxc')
+      .then(function(response) {
+        console.log(response);
+        return response.json();
+      })
+      .then(function(myJson) {
+        console.log(JSON.stringify(myJson));
+      });
+}
+</script>     -->
+
+<h4>CLINICS IN {{ user_city }}, {{ user_state }}</h4> 
 
     <table>
         <tr>
@@ -12,13 +26,12 @@
         </tr>
         
         {% for clinic in user_clinics %}
-            <tr>
-                <td><a href='/show_rates/{{ clinic.clinic_name }}'>{{ clinic.clinic_name }}</td>
-                <td>{{ clinic.state}}</td>
-                <td>{{ clinic.city }}</td>
-            </tr> 
-            {% endfor %}
-
+        <tr>
+            <td><a href='/show_full_address_rates/{{ clinic.clinic_name }}'>{{ clinic.clinic_name }}</a></td> 
+            <td>{{ clinic.state}}</td>
+            <td>{{ clinic.city }}</td>
+        </tr> 
+        {% endfor %}
         
     </table>
 
