--- a/templates/mycharts.html
+++ b/templates/mycharts.html
@@ -1,56 +1,54 @@
-{% extends 'base.html' %}
-{% block content %}
+<!doctype html>
+<html>
+<head>
+</head>
 
-<div class="melon-chart">
-    <canvas id="donutChart"></canvas>
-    <div id="donutLegend" class="chart-legend"></div>
-</div>
+<body>
 
-<div class="melon-chart">
-    <canvas id="lineChart"></canvas>
-    <div id="lineLegend" class="chart-legend"></div>
-</div>
+
+<canvas id="myChart" width="400" height="400"></canvas>
+
 
 <script>
-   const options = {
-      responsive: true
-    };
-
-    // Make Donut Chart of percent of different types of Melons
-    let ctx_donut = $("#donutChart").get(0).getContext("2d");
-
-    $.get("/melon-types.json", function (data) {
-      let myDonutChart = new Chart(ctx_donut, {
-                                              type: 'doughnut',
-                                              data: data,
-                                              options: options
-                                            });
-      $('#donutLegend').html(myDonutChart.generateLegend());
-    });
-
+var ctx = document.getElementById('myChart');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+        datasets: [{
+            label: '# of Votes',
+            data: [12, 19, 3, 5, 2, 3],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)',
+                'rgba(255, 159, 64, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)',
+                'rgba(255, 159, 64, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero: true
+                }
+            }]
+        }
+    }
+});
 </script>
 
-<script>
-    const myBarChart = new Chart(ctx, {
-        type: 'bar',
-        data: data,
-        options: options
-    });
 
-        const options = {
-            responsive: true
-            scales: {
-                xAxes: [{
-                    barPercentage: 0.5,
-                    barThickness: 6,
-                    maxBarThickness: 8,
-                    minBarLength: 2,
-                    gridLines: {
-                        offsetGridLines: true
-                    }
-                    hoverBackgroundColor
-                }]
-            }
-        };
-
-</script>
+</body>
+</html>
