--- a/templates/show_services_rates.html
+++ b/templates/show_services_rates.html
@@ -7,11 +7,26 @@
 <h2>{{ clinic_name }}</h2>
 <h3>{{ clinic_address }}</h3>
 
+<table id="services">
+    <tr>
+        <th>Clinic Services and Profile</th>
+        <td>Member of SART</td>
+        <td>Gestational carrier services</td>
+        <td>Services for single women</td>
+        <td>Egg cryopreservation services</td>
+        <td>Embryo cryopreservation services</td>
+        <td>Donor embryo services</td>
+        <td>Donor egg services</td>
+    </tr>
+    
+</table>
+
+
 
 Fresh embryo:<br><br>
     What is the chance of having multiple live births?<br>
         Age of woman
-        <table>
+        <table id="fresh_mul">
             <tr>
                 <th></th>
                 <th>Less than 35</th>
@@ -32,7 +47,7 @@ Fresh embryo:<br><br>
 
 What is the chance of having a term, normal birth weight and singleton live birth?<br>
         Age of woman
-        <table>
+        <table id="fresh_sin">
             <tr>
                 <th></th>
                 <th>Less than 35</th>
@@ -54,7 +69,7 @@ What is the chance of having a term, normal birth weight and singleton live birt
 Frozen embryo:<br><br>
     What is the chance of having multiple live births?<br>
         Age of woman
-        <table>
+        <table id="fro_mul">
             <tr>
                 <th></th>
                 <th>Less than 35</th>
@@ -75,7 +90,7 @@ Frozen embryo:<br><br>
 Frozen embryo:<br><br>
     What is the chance of having a term, normal birth weight and singleton live birth?<br>
         Age of woman
-        <table>
+        <table id="fro_sin">
             <tr>
                 <th></th>
                 <th>Less than 35</th>
